gen/MiniCParser.py
# Generated from ./grammar/MiniC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniCParser ( Parser ):

    grammarFileName = "MiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'='", "';'", "'print'", "'('", 
                     "')'", "'if'", "'else'", "'while'", "'for'", "'{'", 
                     "'}'", "'-'", "'++'", "'--'", "'*'", "'/'", "'+'", 
                     "'<'", "'<='", "'>'", "'>='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NUMBER", "WS", "COMMENT", "MCOMMENT" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_stmt = 2
    RULE_assign = 3
    RULE_printStmt = 4
    RULE_ifStmt = 5
    RULE_whileStmt = 6
    RULE_forStmt = 7
    RULE_block = 8
    RULE_forInital = 9
    RULE_forCondition = 10
    RULE_forStep = 11
    RULE_expr = 12

    ruleNames =  [ "program", "decl", "stmt", "assign", "printStmt", "ifStmt", 
                   "whileStmt", "forStmt", "block", "forInital", "forCondition", 
                   "forStep", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    ID=25
    NUMBER=26
    WS=27
    COMMENT=28
    MCOMMENT=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniCParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StmtContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33558162) != 0):
                self.state = 28
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 26
                    self.decl()
                    pass
                elif token in [4, 7, 9, 10, 11, 25]:
                    self.state = 27
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self.match(MiniCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MiniCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(MiniCParser.T__0)
            self.state = 36
            self.match(MiniCParser.ID)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 37
                self.match(MiniCParser.T__1)
                self.state = 38
                self.expr(0)


            self.state = 41
            self.match(MiniCParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(MiniCParser.AssignContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(MiniCParser.PrintStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(MiniCParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(MiniCParser.WhileStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(MiniCParser.BlockContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(MiniCParser.ForStmtContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MiniCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.assign()
                self.state = 44
                self.match(MiniCParser.T__2)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.printStmt()
                self.state = 47
                self.match(MiniCParser.T__2)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.ifStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.whileStmt()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 51
                self.block()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 52
                self.forStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = MiniCParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(MiniCParser.ID)
            self.state = 56
            self.match(MiniCParser.T__1)
            self.state = 57
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = MiniCParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(MiniCParser.T__3)
            self.state = 60
            self.match(MiniCParser.T__4)
            self.state = 61
            self.expr(0)
            self.state = 62
            self.match(MiniCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StmtContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = MiniCParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(MiniCParser.T__6)
            self.state = 65
            self.match(MiniCParser.T__4)
            self.state = 66
            self.expr(0)
            self.state = 67
            self.match(MiniCParser.T__5)
            self.state = 68
            self.stmt()
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 69
                self.match(MiniCParser.T__7)
                self.state = 70
                self.stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MiniCParser.StmtContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = MiniCParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(MiniCParser.T__8)
            self.state = 74
            self.match(MiniCParser.T__4)
            self.state = 75
            self.expr(0)
            self.state = 76
            self.match(MiniCParser.T__5)
            self.state = 77
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forInital(self):
            return self.getTypedRuleContext(MiniCParser.ForInitalContext,0)


        def forCondition(self):
            return self.getTypedRuleContext(MiniCParser.ForConditionContext,0)


        def forStep(self):
            return self.getTypedRuleContext(MiniCParser.ForStepContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MiniCParser.StmtContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = MiniCParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(MiniCParser.T__9)
            self.state = 80
            self.match(MiniCParser.T__4)
            self.state = 81
            self.forInital()
            self.state = 82
            self.match(MiniCParser.T__2)
            self.state = 83
            self.forCondition()
            self.state = 84
            self.match(MiniCParser.T__2)
            self.state = 85
            self.forStep()
            self.state = 86
            self.match(MiniCParser.T__5)
            self.state = 87
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StmtContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MiniCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(MiniCParser.T__10)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33558162) != 0):
                self.state = 92
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 90
                    self.decl()
                    pass
                elif token in [4, 7, 9, 10, 11, 25]:
                    self.state = 91
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(MiniCParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForInitalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_forInital

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForInitDeclContext(ForInitalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ForInitalContext
            super().__init__(parser)
            self.id_ = None # Token
            self.e = None # ExprContext
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForInitDecl" ):
                listener.enterForInitDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForInitDecl" ):
                listener.exitForInitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForInitDecl" ):
                return visitor.visitForInitDecl(self)
            else:
                return visitor.visitChildren(self)


    class ForInitAssignContext(ForInitalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ForInitalContext
            super().__init__(parser)
            self.id_ = None # Token
            self.e = None # ExprContext
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForInitAssign" ):
                listener.enterForInitAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForInitAssign" ):
                listener.exitForInitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForInitAssign" ):
                return visitor.visitForInitAssign(self)
            else:
                return visitor.visitChildren(self)


    class ForInitEmptyContext(ForInitalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ForInitalContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForInitEmpty" ):
                listener.enterForInitEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForInitEmpty" ):
                listener.exitForInitEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForInitEmpty" ):
                return visitor.visitForInitEmpty(self)
            else:
                return visitor.visitChildren(self)



    def forInital(self):

        localctx = MiniCParser.ForInitalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forInital)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = MiniCParser.ForInitDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(MiniCParser.T__0)
                self.state = 100
                localctx.id_ = self.match(MiniCParser.ID)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 101
                    self.match(MiniCParser.T__1)
                    self.state = 102
                    localctx.e = self.expr(0)


                pass
            elif token in [25]:
                localctx = MiniCParser.ForInitAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                localctx.id_ = self.match(MiniCParser.ID)
                self.state = 106
                self.match(MiniCParser.T__1)
                self.state = 107
                localctx.e = self.expr(0)
                pass
            elif token in [3]:
                localctx = MiniCParser.ForInitEmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_forCondition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForCondEmptyContext(ForConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ForConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForCondEmpty" ):
                listener.enterForCondEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForCondEmpty" ):
                listener.exitForCondEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForCondEmpty" ):
                return visitor.visitForCondEmpty(self)
            else:
                return visitor.visitChildren(self)


    class ForCondExprContext(ForConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ForConditionContext
            super().__init__(parser)
            self.e = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForCondExpr" ):
                listener.enterForCondExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForCondExpr" ):
                listener.exitForCondExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForCondExpr" ):
                return visitor.visitForCondExpr(self)
            else:
                return visitor.visitChildren(self)



    def forCondition(self):

        localctx = MiniCParser.ForConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_forCondition)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 13, 25, 26]:
                localctx = MiniCParser.ForCondExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                localctx.e = self.expr(0)
                pass
            elif token in [3]:
                localctx = MiniCParser.ForCondEmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_forStep

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForStepEmptyContext(ForStepContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ForStepContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStepEmpty" ):
                listener.enterForStepEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStepEmpty" ):
                listener.exitForStepEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStepEmpty" ):
                return visitor.visitForStepEmpty(self)
            else:
                return visitor.visitChildren(self)


    class ForStepAssignContext(ForStepContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ForStepContext
            super().__init__(parser)
            self.id_ = None # Token
            self.e = None # ExprContext
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStepAssign" ):
                listener.enterForStepAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStepAssign" ):
                listener.exitForStepAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStepAssign" ):
                return visitor.visitForStepAssign(self)
            else:
                return visitor.visitChildren(self)



    def forStep(self):

        localctx = MiniCParser.ForStepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_forStep)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                localctx = MiniCParser.ForStepAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                localctx.id_ = self.match(MiniCParser.ID)
                self.state = 116
                self.match(MiniCParser.T__1)
                self.state = 117
                localctx.e = self.expr(0)
                pass
            elif token in [6]:
                localctx = MiniCParser.ForStepEmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddSubExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSubExpr" ):
                listener.enterAddSubExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSubExpr" ):
                listener.exitAddSubExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSubExpr" ):
                return visitor.visitAddSubExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryMinusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryMinusExpr" ):
                listener.enterUnaryMinusExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryMinusExpr" ):
                listener.exitUnaryMinusExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryMinusExpr" ):
                return visitor.visitUnaryMinusExpr(self)
            else:
                return visitor.visitChildren(self)


    class PostfixminusContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniCParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfixminus" ):
                listener.enterPostfixminus(self)
